[project]
name = "langgraph_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "flask>=3.1.2",
    "flask-cors>=5.0.0",
    "langchain-deepseek>=0.1.4",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-mysql>=2.0.17",
    "langmem>=0.0.29",
    "pymysql>=1.1.2",
    "requests>=2.32.0",
]


